Fixed error with vertical scrollbars

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 /* Body - All websites */
 
 body {
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 /* Carousel */
